--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,10 @@ form {
   overflow: auto !important;
 }
 
+.markdown img {
+  max-width: 100%;
+}
+
 .markdown pre {
   background: #303030;
   color: #f1f1f1;
